<resources>
    <string name="app_name">KeyboardVirtuoso</string>
    <string name="btn_start_phrases_mode">Phrases mode</string>
    <string name="btn_start_chars_mode">Chars mode</string>
    <string name="text_start_game">Start game</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_statistics">Statistics</string>
    <string name="text_app_display_name">Keyboard Virtuoso</string>
    <string name="text_phrases_count_desc">Phrase:</string>
    <string name="text_chars_count_desc">Char:</string>
    <string name="btn_phrases_mode_start_normal">Start</string>
    <string name="btn_restart_game">Restart game</string>
    <string name="btn_return_to_menu">Return to menu</string>
    <string name="btn_go_to_statistics">Go to statistics</string>
    <string name="btn_exit_game">Exit game</string>
    <string name="text_setting_title">Settings</string>
    <string name="text_statistics_title">Statistics</string>
    <string name="btn_return">Return</string>
    <string name="text_char_game_initial_desc" formatted="true">&lt;big>After game start you should type &lt;b>%1$d chars&lt;/b>.&lt;/big> &lt;br /> Don\'t correct typed chars. Don\'t change keyboard.</string>
    <string name="text_char_game_summary_count">You typed correct %1$d from %2%d chars in %3$.2f seconds</string>
    <string name="text_char_game_summary_speed">You type with speed %1$.1f chars per minute</string>
    <string name="text_phrase_game_initial_desc">After game start you should type &lt;b>%1$d phrases&lt;/b>. &lt;br /> Phrases are submited by click enter button (continue).&lt;br /> Don\'t correct typed phrases. Don\'t change keyboard.</string>
    <string name="text_phrase_game_summary_count">You typed correct %1$d from %2%d words in %3$.2f seconds</string>
    <string name="text_phrase_game_summary_speed" >You type with speed %1$.1f words per minute</string>
    <string name="btn_statistics_clear">Delete</string>
    <string name="text_statistics_phrase_speed">%1$.1f words per minute</string>
    <string name="text_statistics_phrase_correct">%1$.0f%% correct words</string>
    <string name="text_statistics_phrase_correct_diacritic">%1$.0f%% correct words with diacritic chars</string>
    <string name="text_statistics_char_speed">%1$.1f chars per minute</string>
    <string name="text_statistics_char_lower_letters">Lower letters – %1$.0f%% correct – %2$.1f per minute</string>
    <string name="text_statistics_char_upper_letters">Upper letters – %1$.0f%% correct – %2$.1f per minute</string>
    <string name="text_statistics_char_digits">Digits – %1$.0f%% poprawnie – %2$.1f per minute</string>
    <string name="text_statistics_char_special">Special chars – %1$.0f%% poprawnie – %2$.1f per minute</string>
    <string name="text_settings_phrases_count">Phrases count in single game</string>
    <string name="text_settings_chars_count">Chars count in single game</string>
    <string name="btn_settings_save">Save</string>
</resources>
