<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/text_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_content_left"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_content_right"
        android:text="@string/text_app_display_name"
        android:textSize="@dimen/text_size_extralarge"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_main_start_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_content_left"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_content_right"
        android:text="@string/text_start_game"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_main_title" />

    <Button
        android:id="@+id/btn_main_start_phrases"
        style="@style/AppTheme.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_content_left"
        android:layout_marginTop="@dimen/margin_extrasmall"
        android:layout_marginEnd="@dimen/margin_content_right"
        android:text="@string/btn_start_phrases_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_main_start_game" />

    <Button
        android:id="@+id/btn_main_start_chars"
        style="@style/AppTheme.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_content_left"
        android:layout_marginTop="@dimen/margin_extrasmall"
        android:layout_marginEnd="@dimen/margin_content_right"
        android:text="@string/btn_start_chars_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_main_start_phrases" />

    <Button
        android:id="@+id/btn_main_statistics"
        style="@style/AppTheme.Button.Secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_content_left"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_content_right"
        android:text="@string/btn_statistics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_main_start_chars" />

    <Button
        android:id="@+id/btn_main_settings"
        style="@style/AppTheme.Button.Secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_content_left"
        android:layout_marginTop="@dimen/margin_extrasmall"
        android:layout_marginEnd="@dimen/margin_content_right"
        android:text="@string/btn_settings"
        android:textSize="@dimen/text_size_btn_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_main_statistics" />

</android.support.constraint.ConstraintLayout>