<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsActivity">

    <TextView
        android:id="@+id/text_settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_content_left"
        android:layout_marginEnd="@dimen/margin_content_right"
        android:text="@string/text_setting_title"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btn_settings_return"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_settings_return" />

    <Button
        android:id="@+id/btn_settings_return"
        style="@style/AppTheme.Button.Default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_extrasmall"
        android:layout_marginTop="@dimen/margin_extrasmall"
        android:text="@string/btn_return"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_settings_phrases_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_content_left"
        android:labelFor="@+id/edit_text_settings_phrases_count"
        android:text="@string/text_settings_phrases_count"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_settings_phrases_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_text_settings_phrases_count" />

    <EditText
        android:id="@+id/edit_text_settings_phrases_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_content_right"
        android:ems="10"
        android:inputType="number"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_settings_phrases_count_label"
        app:layout_constraintTop_toBottomOf="@+id/text_settings_title"
        tools:text="10" />

    <TextView
        android:id="@+id/text_settings_chars_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_content_left"
        android:text="@string/text_settings_chars_count"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_settings_chars_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_text_settings_chars_count" />

    <EditText
        android:id="@+id/edit_text_settings_chars_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_content_right"
        android:ems="10"
        android:inputType="number"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_settings_chars_count_label"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_settings_phrases_count"
        tools:text="10" />

    <Button
        android:id="@+id/btn_settings_save"
        style="@style/AppTheme.Button.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_content_right"
        android:text="@string/btn_settings_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_settings_chars_count" />

</android.support.constraint.ConstraintLayout>