<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_game_summary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/modal_background"
    android:clickable="true"
    android:focusable="true"
    android:longClickable="true"
    android:visibility="visible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0">

    <Button
        android:id="@+id/btn_game_start_again"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_content_left"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_content_right"
        android:background="@color/colorAccent"
        android:text="@string/btn_restart_game"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_game_summary" />

    <Button
        android:id="@+id/btn_game_return_to_menu"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_content_left"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_content_right"
        android:background="@color/colorAccent"
        android:text="@string/btn_return_to_menu"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_game_start_again" />

    <Button
        android:id="@+id/btn_game_statistics"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_content_left"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_content_right"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_go_to_statistics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_game_return_to_menu" />

    <TextView
        android:id="@+id/text_game_summary_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_content_left"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_content_right"
        android:gravity="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Udało Ci się wpisać 10 fraz w ciągu 120 sekund" />

    <TextView
        android:id="@+id/text_game_summary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_content_left"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_content_right"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_game_summary_top"
        tools:text="Osiągnąłeś szybkość 12 słów na minutę" />

</android.support.constraint.ConstraintLayout>